pub done working prod

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     </div>
   </nav> -->
 
-  <br />
-  <br />
+  <br>
+  <br>
   <div class="container">
     <div class="row">
       <div class="col-sm-2"></div>
@@ -60,11 +60,11 @@
         <img src="./images/JGW3 Headshot 03.jpg" alt="JW headhsot">
       </div>
     </div>
-    <br />
-    <br />
+    <br>
+    <br>
     <div class="row">
 
-      <div class="col md-6">
+      <div class="col-lg-8 offset-md-2">
         <h5>After 24 years in the radio & records industry where I have become known for my quality &
           skill in scriptwriting & production. Now I have added to my arsenal of professional tools with a
           full stack development certificate from the Vanderbilt University Bootcamp in Nashville, Tennessee.
@@ -79,9 +79,8 @@
 
     </div>
   </div>
-  <br />
-  <br />
-  <br />
+  <br>
+  <br>
   <footer class="footer">
     <a href="https://productioncontent.com/" class="btn btn-primary">Production Content</a>
     <a href="https://countrymusicprep.com/" class="btn btn-secondary">Country Music Prep</a>
