--- a/production.html
+++ b/production.html
@@ -4,13 +4,13 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- my CSS sheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="prodstyle.css">
 
     <title>The Joe Wills Experience</title>
 </head>
@@ -28,22 +28,80 @@
             </div>
 
             <div class="col-8">
-                <h1><a name="publicist"></a>What is an Audio Publicist?</h1>
+                <h1><a name="publicist"></a>Production Guru, really?</h1>
                 <br />
 
-                <h5>An Audio Publicist is a term I coined in 2017 to explain an aspect of
-                    what I do when it comes to my company Production Content, Inc. From my experience
-                    in working at a major record label and radio syndication company, press releases are a good way to
-                    communicate information to radio stations and audio news outlets. But I discovered that
-                    information is ingest, retained, and regurgitated if the messaging is
-                    in the form of a soundbite from the subject matter him/her self.</h5>
+                <h5>Let's start with this...audio projects I have produced over the last 2 plus decades have reached
+                    over 2 hundred million listeners in the US, Europe and Australia. I have produced radio programs
+                    in the rock, hip-hop, classic soul, Christian music and country music formats over the length of my
+                    career.
+                </h5>
 
+                <h5>From 15 second commercials to 24 hour holiday programming, I have produced it all.</h5>
 
-                <h5>So, when it comes to working with an artist, record label, or any client that
-                    wants to convey information to an audio outlet, I have skills and experience
-                    to help you create a concise and effective message to audience you want to reach.
+                <h5>I have produced radio specials/programs for Kenny Chesney, The Allman Brothers, Carrie Underwood,
+                    Joey Ramone, Maren Morris, Roberta Flack, Alan Jackson, Trisha Yearwood, Brad Paisley, Garth Brooks,
+                    and many, many others.
+                </h5>
+
+                <h5>Production pieces normally don't hit the record charts, but my work has done it twice.
+                    First with a special produced version of the song "To Life" from the legedary singer Eddy Arnold.
+                    Not only did the produced song chart, it made history. By hitting the charts in May of 2008
+                    with the song, Eddy Arnold became the first (and still only) artist to mark 7 decades on the music
+                    charts.
+                </h5>
+
+                <h5>My other production piece that hits the music charts is an all-star version of the classic
+                    holiday poem 'Twas The Night Before Christmas, which features a combination of country music stars,
+                    rising stars and legends are reciting the holiday classic. I first produced it in 2008, and since
+                    then, it has become a country radio tradition--one that other country music news outlets have gone
+                    on to emulate with their own versions.
                 </h5>
             </div>
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <h4><strong>Some of my production samples</strong>
+                </h4>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col align-self-start">
+                <img src="images/Kenny.jpg">
+            </div>
+            <div class="col align-self-center">
+               <img src="images/garth.jpg">
+            </div>
+            <div class="col align-self-end">
+                <img src="images/Christmas.jpg">
+            </div>
+            <div class="col align-self-center">
+               <img src="images/Luke.jpg">
+            </div>
+            <div class="col align-self-start">
+                <img src="images/Twas.jpg">
+            </div>
+        </div>
+    </div>
+
+    <br>
+    <br>
+    <footer class="footer">
+        <a href="https://productioncontent.com/" class="btn btn-primary">Production Content</a>
+        <a href="https://countrymusicprep.com/" class="btn btn-secondary">Country Music Prep</a>
+        <button type="button" class="btn btn-success">Contact</button>
+        <button type="button" class="btn btn-info">Info</button>
+        <br>
+        <br>
+
+        <p>[The content on this site is copyrighted and not for reproduction]</p>
+
+
+    </footer>
 
 
 
@@ -62,20 +120,17 @@
 
 
 
-
-
-
-            <!-- Optional JavaScript -->
-            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-                crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-                integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-                crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-                integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-                crossorigin="anonymous"></script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
