--- a/production.html
+++ b/production.html
@@ -51,7 +51,7 @@
                     charts.
                 </h5>
 
-                <h5>My other production piece that hits the music charts is an all-star version of the classic
+                <h5>My other production piece that hit the music charts is an all-star version of the classic
                     holiday poem 'Twas The Night Before Christmas, which features a combination of country music stars,
                     rising stars and legends are reciting the holiday classic. I first produced it in 2008, and since
                     then, it has become a country radio tradition--one that other country music news outlets have gone
