pics are fixed now two pages left

--- a/writer.html
+++ b/writer.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- my CSS sheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="writerstyle.css">
 
     <title>The Joe Wills Experience</title>
 </head>
 
 <body>
-    <br />
-    <br />
+    <br>
+    <br>
     <div class="container">
         <div class="row">
             <div class="col-4">
@@ -29,7 +29,7 @@
 
             <div class="col-8">
                 <h1><a name="publicist"></a>What is an Audio Publicist?</h1>
-                <br />
+                <br>
 
                 <h5>An Audio Publicist is a term I coined in 2017 to explain an aspect of
                     what I do when it comes to my company Production Content, Inc. From my experience
@@ -44,6 +44,25 @@
                     to help you create a concise and effective message to audience you want to reach.
                 </h5>
             </div>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <a href="https://productioncontent.com/" class="btn btn-primary">Production Content</a>
+        <a href="https://countrymusicprep.com/" class="btn btn-secondary">Country Music Prep</a>
+        <button type="button" class="btn btn-success">Contact</button>
+        <button type="button" class="btn btn-info">Info</button>
+        <br>
+        <br>
+
+        <p>[The content on this site is copyrighted and not for reproduction]</p>
+
+
+    </footer>
+
+    <br>
+    <br>
+
 
 
 
