--- a/production.html
+++ b/production.html
@@ -17,7 +17,6 @@
 
 <body>
     <br>
-    <br>
     <div class="container">
         <div class="row">
             <div class="col-4">
@@ -52,19 +51,20 @@
                 </h5>
 
                 <h5>My other production piece that hit the music charts is an all-star version of the classic
-                    holiday poem 'Twas The Night Before Christmas, which features a combination of country music stars,
-                    rising stars and legends are reciting the holiday classic. I first produced it in 2008, and since
+                    holiday poem 'Twas The Night Before Christmas, which features an all-star combination of country
+                    music stars reciting the holiday classic. I first produced it in 2008, and since
                     then, it has become a country radio tradition--one that other country music news outlets have gone
                     on to emulate with their own versions.
                 </h5>
             </div>
         </div>
+        <br>
     </div>
     <br>
-    <br>
     <div class="container">
+        <br>
         <div class="row">
-            <div class="col-md-6 offset-md-3">
+            <div class="col-md-6 offset-md-4">
                 <h4><strong>Some of my production samples</strong>
                 </h4>
             </div>
