more pages completed

--- a/webdev.html
+++ b/webdev.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- my CSS sheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="webdevstyle.css">
 
     <title>The Joe Wills Experience</title>
 </head>
@@ -25,27 +25,85 @@
                 <H3><a href="publicist.html">Audio Publicist</a></H3>
                 <H3><a href="production.html">Production Guru</a></H3>
                 <H3><a href="writer.html">Content/Script Writer</a></H3>
-                
+
             </div>
 
             <div class="col-8">
-                <h1><a name="publicist"></a>What is an Audio Publicist?</h1>
+                <h1><a name="top"></a>My Coding Life</h1>
                 <br />
 
-                <h5>An Audio Publicist is a term I coined in 2017 to explain an aspect of
-                    what I do when it comes to my company Production Content, Inc. From my experience
-                    in working at a major record label and radio syndication company, press releases are a good way to
-                    communicate information to radio stations and audio news outlets. But I discovered that
-                    information is ingest, retained, and regurgitated if the messaging is
-                    in the form of a soundbite from the subject matter him/her self.</h5>
+                <h5>After working on the user-end side of websites for years, and then getting to
+                    add content to websites in my career, I have become more and more interested in
+                    how they work.
+                </h5>
 
-
-                <h5>So, when it comes to working with an artist, record label, or any client that
-                    wants to convey information to an audio outlet, I have skills and experience
-                    to help you create a concise and effective message to audience you want to reach.
+                <h5>How do you get them to look a certain way? How do you get the functionality you need?
+                    In wanting to create a website experience that I could taylor myslef, I dove head first
+                    into the world of web development.
                 </h5>
             </div>
 
+        </div>
+        <br>
+    </div>
+    <br>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 offset-md-4">
+                <h4><strong>A sample of my projects</strong>
+                </h4>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="container">
+            <div class="row">
+                <div class="col"><img src="images/employee.png">
+                    <a href="https://joewills615.github.io/Employee_Summary/"
+                        class="btn btn-primary">Click Here For Employee Summary README</a>
+                </div>
+                <div class="col"><img src="images/gen_password.PNG">
+                    <a href="https://joewills615.github.io/Password_Generator/"
+                        class="btn btn-primary">Click Here For Password Generator</a>
+                </div>
+                <br>
+                <div class="w-100"></div>
+                <br>
+                <div class="col"><img src="images/burger.PNG">
+                    <a href="https://joewills615.github.io/Password_Generator/"
+                        class="btn btn-primary">Click Here For Password Generator</a>
+                    
+                </div>
+                <div class="col"><img src="images/planner.PNG">
+                    <a href="https://joewills615.github.io/Day_Planner/"
+                        class="btn btn-primary">Click Here For Day Planner</a>
+                </div>
+                <br>
+                <div class="w-100"></div>
+                <br>
+                <div class="col"><img src="images/notetaker.png">
+                </div>
+                <div class="col"><img src="images/onhand.PNG">
+                </div>
+                <br>
+                <br>
+            </div>
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-lg-8 offset-md-4">
+                    <p2><a href="#top">Back To Top</a></p2>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+    </div>
 
 
 
@@ -57,26 +115,37 @@
 
 
 
+    <footer class="footer">
+        <a href="https://productioncontent.com/" class="btn btn-primary">Production Content</a>
+        <a href="https://countrymusicprep.com/" class="btn btn-secondary">Country Music Prep</a>
+        <button type="button" class="btn btn-success">Contact</button>
+        <button type="button" class="btn btn-info">Info</button>
+        <br>
+        <br>
+
+        <p>[The content on this site is copyrighted and not for reproduction]</p>
+
+
+    </footer>
+
+    <br>
+    <br>
 
 
 
 
 
-
-
-
-
-            <!-- Optional JavaScript -->
-            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-                crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-                integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-                crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-                integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-                crossorigin="anonymous"></script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
