--- a/writer.html
+++ b/writer.html
@@ -17,8 +17,8 @@
 
 <body>
     <br>
-    <br>
     <div class="container">
+        <br>
         <div class="row">
             <div class="col-4">
                 <H3><a href="index.html">Home</a></H3>
@@ -28,21 +28,27 @@
             </div>
 
             <div class="col-8">
-                <h1><a name="publicist"></a>What is an Audio Publicist?</h1>
+                <h1><a name="top"></a>What is a Content/Script Writer?</h1>
                 <br>
 
-                <h5>An Audio Publicist is a term I coined in 2017 to explain an aspect of
-                    what I do when it comes to my company Production Content, Inc. From my experience
-                    in working at a major record label and radio syndication company, press releases are a good way to
-                    communicate information to radio stations and audio news outlets. But I discovered that
-                    information is ingest, retained, and regurgitated if the messaging is
-                    in the form of a soundbite from the subject matter him/her self.</h5>
-
-
-                <h5>So, when it comes to working with an artist, record label, or any client that
-                    wants to convey information to an audio outlet, I have skills and experience
-                    to help you create a concise and effective message to audience you want to reach.
+                <h5>There are all kinds of writers...including good ones and bad ones. For what I do, I am a
+                    good one. I write for the spoken word, and the "rip & read" element of radio. The term "rip & read"
+                    dates back to the early days of radio newscasts, when anchors would rip the latest incoming news off
+                    the teletype and go directly on air with it. As radio has evolved, so has the "rip & read."
+                    In today's world of radio, the fast-paced atmosphere has been combined with diminishing staff levels
+                    at stations. Prep time has become more intense, so having a properly prepared content asset
+                    available to the host is even more crucial now. </h5>
+                <br>
+                <h5>Writing for content and script, the style is very similar. It's about using short sentences, using
+                    punctuation as visual cues, and making sure your information is structure in the proper sequence,
+                    with all the needed details being included. Short sentences, so the read doesn't lose breath.
+                    Punctuation, such as periods, exclamation points and question marks are easy to interpret.
+                    ut a seasoned script writer, and reader, will look for commas as a place to take a breath,
+                    ellipsis as a pause, and change of tone.
                 </h5>
+                <br>
+
+
             </div>
         </div>
     </div>
@@ -84,17 +90,17 @@
 
 
 
-            <!-- Optional JavaScript -->
-            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-                crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-                integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-                crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-                integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-                crossorigin="anonymous"></script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
