--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="col-sm-2"></div>
       <div class="col">
         <H1>Meet Joe Wills</H1>
-        <br>
+        
         <H3><a href="publicist.html">Audio Publicist</a></H3>
         <H3><a href="production.html">Production Guru</a></H3>
         <H3><a href="writer.html">Content/Script Writer</a></H3>
@@ -59,10 +59,12 @@
         <img src="./images/JGW3 Headshot 03.jpg" alt="JW headhsot">
       </div>
     </div>
-    <br>
+    
+  </div>
+  <br>
+  <div class="container">
     <br>
     <div class="row">
-
       <div class="col-lg-8 offset-md-2">
         <h5>After 24 years in the radio & records industry where I have become known for my quality &
           skill in scriptwriting & production. Now I have added to my arsenal of professional tools with a
@@ -75,20 +77,18 @@
           the widest audiences, and now with my new skill set in place,
           I am fully prepared to be a valuable asset in your company & its future success. </h5>
       </div>
-
     </div>
     <br>
-    <br>
   </div>
- 
+
+  
   <footer class="footer">
     <a href="https://productioncontent.com/" class="btn btn-primary">Production Content</a>
     <a href="https://countrymusicprep.com/" class="btn btn-secondary">Country Music Prep</a>
-    <button type="button" class="btn btn-success">Contact</button>
-    <button type="button" class="btn btn-info">Info</button>
+    <a href="https://www.linkedin.com/in/joewills615/" class="btn btn-success">linkedIN</a>
+    <a href="https://github.com/JoeWills615" class="btn btn-info">GitHub</a>
     <br>
     <br>
-
     <p>[The content on this site is copyrighted and not for reproduction]</p>
 
 
