--- a/publicist.html
+++ b/publicist.html
@@ -182,8 +182,8 @@
     <footer class="footer">
         <a href="https://productioncontent.com/" class="btn btn-primary">Production Content</a>
         <a href="https://countrymusicprep.com/" class="btn btn-secondary">Country Music Prep</a>
-        <button type="button" class="btn btn-success">Contact</button>
-        <button type="button" class="btn btn-info">Info</button>
+        <a href="https://www.linkedin.com/in/joewills615/" class="btn btn-success">linkedIN</a>
+        <a href="https://github.com/JoeWills615" class="btn btn-info">GitHub</a>
         <br>
         <br>
         <p>[The content on this site is copyrighted and not for reproduction]</p>
