--- a/webdev.html
+++ b/webdev.html
@@ -38,7 +38,7 @@
                 </h5>
 
                 <h5>How do you get them to look a certain way? How do you get the functionality you need?
-                    In wanting to create a website experience that I could taylor myslef, I dove head first
+                    In wanting to create a website experience that I could taylor myself, I dove head first
                     into the world of web development.
                 </h5>
             </div>
@@ -59,32 +59,35 @@
         <br>
         <div class="container">
             <div class="row">
-                <div class="col"><img src="images/employee.png">
-                    <a href="https://joewills615.github.io/Employee_Summary/"
-                        class="btn btn-primary">Click Here For Employee Summary README</a>
+                <div class="col"><img src="images/onhand.PNG">
+                    <a href="https://msplawn.github.io/on-hand/" class="btn btn-primary">Click Here For On HAND app</a>
                 </div>
                 <div class="col"><img src="images/gen_password.PNG">
-                    <a href="https://joewills615.github.io/Password_Generator/"
-                        class="btn btn-primary">Click Here For Password Generator</a>
+                    <a href="https://joewills615.github.io/Password_Generator/" class="btn btn-primary">Click Here For
+                        Password Generator</a>
                 </div>
                 <br>
                 <div class="w-100"></div>
                 <br>
                 <div class="col"><img src="images/burger.PNG">
-                    <a href="https://joewills615.github.io/Password_Generator/"
-                        class="btn btn-primary">Click Here For Password Generator</a>
-                    
+                    <a href="https://joewills615.github.io/Password_Generator/" class="btn btn-primary">Click Here For
+                        THE Burger app</a>
+
                 </div>
                 <div class="col"><img src="images/planner.PNG">
-                    <a href="https://joewills615.github.io/Day_Planner/"
-                        class="btn btn-primary">Click Here For Day Planner</a>
+                    <a href="https://joewills615.github.io/Day_Planner/" class="btn btn-primary">Click Here For Day
+                        Planner</a>
                 </div>
                 <br>
                 <div class="w-100"></div>
                 <br>
                 <div class="col"><img src="images/notetaker.png">
+                    <a href="https://damp-refuge-48141.herokuapp.com/notes" class="btn btn-primary">Click Here For Note
+                        Taker</a>
                 </div>
-                <div class="col"><img src="images/onhand.PNG">
+                <div class="col"><img src="images/employee.png">
+                    <a href="https://joewills615.github.io/Employee_Summary/" class="btn btn-primary">Click Here For
+                        Employee Summary README</a>
                 </div>
                 <br>
                 <br>
@@ -96,45 +99,20 @@
                     <p2><a href="#top">Back To Top</a></p2>
                 </div>
             </div>
+            <br>
         </div>
-
-
-
-
-
-
     </div>
-
-
-
-
-
-
-
-
-
-
-
     <footer class="footer">
         <a href="https://productioncontent.com/" class="btn btn-primary">Production Content</a>
         <a href="https://countrymusicprep.com/" class="btn btn-secondary">Country Music Prep</a>
-        <button type="button" class="btn btn-success">Contact</button>
-        <button type="button" class="btn btn-info">Info</button>
+        <a href="https://www.linkedin.com/in/joewills615/" class="btn btn-success">linkedIN</a>
+        <a href="https://github.com/JoeWills615" class="btn btn-info">GitHub</a>
         <br>
         <br>
 
         <p>[The content on this site is copyrighted and not for reproduction]</p>
 
-
     </footer>
-
-    <br>
-    <br>
-
-
-
-
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
