--- a/webdev.html
+++ b/webdev.html
@@ -66,18 +66,21 @@
                     <a href="https://joewills615.github.io/Password_Generator/" class="btn btn-primary">Click Here For
                         Password Generator</a>
                 </div>
+            </div>
+            <div class="row">
                 <br>
                 <div class="w-100"></div>
                 <br>
                 <div class="col"><img src="images/burger.PNG">
                     <a href="https://joewills615.github.io/Password_Generator/" class="btn btn-primary">Click Here For
                         THE Burger app</a>
-
                 </div>
                 <div class="col"><img src="images/planner.PNG">
                     <a href="https://joewills615.github.io/Day_Planner/" class="btn btn-primary">Click Here For Day
                         Planner</a>
                 </div>
+            </div>
+            <div class="row">
                 <br>
                 <div class="w-100"></div>
                 <br>
@@ -89,15 +92,17 @@
                     <a href="https://joewills615.github.io/Employee_Summary/" class="btn btn-primary">Click Here For
                         Employee Summary README</a>
                 </div>
+            </div>
+            <div class="row">
                 <br>
                 <div class="w-100"></div>
                 <br>
                 <div class="col"><img src="images/impression.png">
                     <a href="https://pacific-basin-52237.herokuapp.com/" class="btn btn-primary">Click Here For the
-                        First
-                        Impression app</a>
+                        First Impression app</a>
                 </div>
-                <div></div>
+                <div class="col">
+                </div>
                 <br>
             </div>
             <br>
