--- a/webdev.html
+++ b/webdev.html
@@ -72,8 +72,8 @@
                 <div class="w-100"></div>
                 <br>
                 <div class="col"><img src="images/burger.PNG">
-                    <a href="https://joewills615.github.io/Password_Generator/" class="btn btn-primary">Click Here For
-                        THE Burger app</a>
+                    <a href="https://pacific-caverns-85472.herokuapp.com/" class="btn btn-primary">Click Here For
+                        the Burger app</a>
                 </div>
                 <div class="col"><img src="images/planner.PNG">
                     <a href="https://joewills615.github.io/Day_Planner/" class="btn btn-primary">Click Here For Day
